# EngFormat-Cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: basic-ci.yml
examples/: demo_eng_format.cpp  demo_factors.cpp  example1.cpp
src/: eng_format.cpp
test/: CMakeLists.txt  Makefile  test_eng_format.cpp
